editar cliente ok

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">Alquiler de Vehiculos</h2>
-            <form action="/login12" method="POST">
+            <form action="/cliente/" method="POST">
 
 <!--              <p th:if="${error != null}" th:text="${error}" style="color:red"></p>-->
 <!--              <p th:if="${logout != null}" th:text="${logout}" style="color:green"></p>-->usernamepassword
