--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,11 +71,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">Alquiler de Vehiculos</h2>
-            <form action="/cliente/" method="POST">
-
-<!--              <p th:if="${error != null}" th:text="${error}" style="color:red"></p>-->
-<!--              <p th:if="${logout != null}" th:text="${logout}" style="color:green"></p>-->usernamepassword
-
+            <form action="/prueba/" method="POST">
               <label>E-Mail</label>
               <input type="email" class="form-control" name="correo" />
 
@@ -93,7 +89,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p>
+      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
     </div>
     <!-- /.container -->
   </footer>
