--- a/src/main/resources/templates/historial_contrato.html
+++ b/src/main/resources/templates/historial_contrato.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Alquiler de Vehiculo - Historial Reserva</title>
+    <title>Alquiler de Vehiculo - Historial Contratos</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,42 +29,39 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/cliente/(correo=${clienteLog.mail})}" >Alquiler de Vehículos - Home</a>
+        <a class="navbar-brand" href="/">Alquiler de Vehículos - Historial</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" th:href="@{/reserva/generar_reserva(idv=__${vehiculo.id}__,idc=${clienteLog.id})}">Home</a>-->
-<!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Salir</a>
+                    <a class="nav-link" th:href="@{/reserva/generar_reserva(idv=__${vehiculo.id}__,idc=${clienteLog.id})}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Salir</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<!--<header class="masthead text-center text-white">-->
-<!--    <div class="masthead-content">-->
-<!--        <div class="container">-->
-<!--            <h1 class="masthead-heading mb-0">Mis Reservas</h1>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</header>-->
+<header class="masthead text-center text-white">
+    <div class="masthead-content">
+        <div class="container">
+            <h1 class="masthead-heading mb-0">Los Contratos</h1>
+        </div>
+    </div>
+</header>
 
 <section>
 
     <div class="container">
-<!--<div> mostrar el texto con el nombre del cliente-->
-<!--    <h2 th:text="${autoReservado.id}">Historial de reserva - </h2>-->
-<!--</div>-->
-        <div class="list-crear_mascota-btn" style="padding-top: 30px" >
-            <a th:href="@{/cliente/(correo=${clienteLog.mail})}" class="btn btn-primary btn-xl rounded-pill mt-5 ">¡Agrega una
-                Reserva!</a>
-        </div>
+<!--        <div class="list-crear_mascota-btn">-->
+<!--            <a th:href="@{/cliente/}" class="btn btn-primary btn-xl rounded-pill mt-5 ">¡Agrega una-->
+<!--                Reserva!</a>-->
+<!--        </div>-->
         <br>
         <div class="row align-items-center">
             <table class="table table-hover">
