--- a/src/main/resources/templates/index_cliente.html
+++ b/src/main/resources/templates/index_cliente.html
@@ -20,18 +20,20 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Alquiler de Vehículos - Bienvenido</a>
+<!--        <a class="navbar-brand" th:href="@{/cliente(correo=${clienteLog.correo})" >Alquiler de Vehículos - Bienvenido</a>-->
+        <a class="navbar-brand" th:href="@{/cliente/(correo=${clienteLog.mail})}">Alquiler de Vehículos - Bienvenido</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Salir</a>
+                    <a class="nav-link" href="/">Salir</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/xxx">Historial de Reservas</a>
+                    <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial de Reservas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/cliente/editar-perfil(id=${clienteLog.id})}">Editar Perfil</a>
@@ -52,7 +54,7 @@
     <div class="container">
 
         <div class="row align-items-center">
-            <h1 class="row align-items-center" >Estos son nuestros vehiculos </h1>
+            <h1 class="row align-items-center" >Estos son nuestros Vehículos </h1>
 
             <table class="table table-hover">
                 <thead>
@@ -89,7 +91,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-black">
     <div class="container">
-        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2019</p>
+        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
     </div>
 </footer>
 <!-- Bootstrap core JavaScript -->
