--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="/">Tinder de Mascota</a>
+      <a class="navbar-brand" th:href="@{/cliente/(correo=${perfil.mail})}" >Home </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,29 +36,29 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/logout">Salir</a>
+            <a class="nav-link" href="/">Salir</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <header class="masthead text-center text-white">
-    <div class="masthead-content">
-      <div class="container">
-        <h1 class="masthead-heading mb-0">Actualizar usuario</h1>
-<!--        <h2 class="masthead-subheading mb-0" th:if="${session.usuariosession != null}"-->
-<!--          th:text="${session.usuariosession.nombre + ' ' + session.usuariosession.apellido}"></h2>-->
-      </div>
-    </div>
-    <div class="bg-circle-1 bg-circle"></div>
-    <div class="bg-circle-2 bg-circle"></div>
-    <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div>
-  </header>
+<!--  <header class="masthead text-center text-white">-->
+<!--    <div class="masthead-content">-->
+<!--      <div class="container">-->
+<!--        <h1 class="masthead-heading mb-0">Actualizar usuario</h1>-->
+<!--&lt;!&ndash;        <h2 class="masthead-subheading mb-0" th:if="${session.usuariosession != null}"&ndash;&gt;-->
+<!--&lt;!&ndash;          th:text="${session.usuariosession.nombre + ' ' + session.usuariosession.apellido}"></h2>&ndash;&gt;-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="bg-circle-1 bg-circle"></div>-->
+<!--    <div class="bg-circle-2 bg-circle"></div>-->
+<!--    <div class="bg-circle-3 bg-circle"></div>-->
+<!--    <div class="bg-circle-4 bg-circle"></div>-->
+<!--  </header>-->
 
   <section>
-    <div class="container">
+    <div class="container " >
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
 
@@ -92,7 +92,7 @@
               <label>Repetir Clave</label>
               <input type="password" class="form-control" name="clave2" th:value="${clave2}" />
 
-              <br /><button type="submit" class="btn btn-primary">Registrarme</button>
+              <br /><button type="submit" class="btn btn-primary">Actualizar</button>
             </form>
           </div>
         </div>
@@ -104,7 +104,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
     </div>
     <!-- /.container -->
   </footer>
