--- a/src/main/resources/templates/genera_contrato.html
+++ b/src/main/resources/templates/genera_contrato.html
@@ -37,20 +37,12 @@
 <!--                    <a class="nav-link" th:href="@{/cliente/(id=${clienteLog.id})}">Home</a>-->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/index">Salir</a>
+                    <a class="nav-link" href="/">Salir</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
-<header class="masthead text-center text-white">
-    <div class="masthead-content">
-        <div class="container">
-            <h1 class="masthead-heading mb-0">Formulario de Contrato</h1>
-        </div>
-    </div>
-</header>
 
 <section>
     <div class="container">
@@ -105,6 +97,19 @@
                         <!--              // th:value="${vehiculo.typeGama}"/>-->
                         <label>Fecha de Devolución</label>
                         <input type="Date" class="form-control" name="fDevolucion"/>
+                        <!--              // th:value="${vehiculo.typeGama}"/>-->
+                        <br/>
+                        <label><h3>DATOS DEL EMPLEADO</h3></label><br>
+                        <label>ID EMPLEADO</label>
+                        <input type="text" class="form-control" name="ide" th:value="${empleadoLog.id}"/>
+                        <!--                        <label>Fecha de Gestión</label>-->
+                        <!--                        <input type="Date" class="form-control" name="fechaRegistrp"/>-->
+                        <!--              // th:value="${vehiculo.typeGama}"/>-->
+                        <label>NOMBRE DEL EMPLEADO</label>
+                        <input type="text" class="form-control" name="nombre_emple"th:value="${empleadoLog.nombre}"/>
+                        <!--              // th:value="${vehiculo.typeGama}"/>-->
+                        <label>APELLIDO DEL EMPLEADO</label>
+                        <input type="text" class="form-control" name="apellido_emple"th:value="${empleadoLog.apellido}"/>
                         <!--              // th:value="${vehiculo.typeGama}"/>-->
                         <br/>
                         <button type="submit" class="btn btn-primary">Confirmar</button>
