--- a/src/main/resources/templates/index_ventas.html
+++ b/src/main/resources/templates/index_ventas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Listado de Automoviles</title>
+    <title>Home Empleado Ventas</title>
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom fonts for this template -->
@@ -20,32 +20,42 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Alquiler de Vehículos - Bienvenido</a>
+        <a class="navbar-brand" href="/">Alquiler de Vehículos - Bienvenido Empleado - Ventas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <h2>estoy en ventas</h2>
-<!--        <div class="collapse navbar-collapse" id="navbarResponsive">-->
-<!--            <ul class="navbar-nav ml-auto">-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="/logout">Salir</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial de Reservas</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" th:href="@{/cliente/editar-perfil(id=${clienteLog.id})}">Editar Perfil</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
+
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Salir</a>
+                </li>
+                <li class="nav-item">
+<!--                  //  <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial de Contratos</a>-->
+                </li>
+                <li class="nav-item">
+<!--                   // <a class="nav-link" th:href="@{/cliente/editar-perfil(id=${clienteLog.id})}">Editar Perfil</a>-->
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 <header class="masthead text-center text-white">
+    <div class="list-crear_mascota-btn" style="padding-top: 30px" >
+        <div class="container">
+            <h1 class="masthead-heading mb-0" th:text="${empleadoLog.nombre}"></h1>
+            <h1 class="masthead-heading mb-0" th:text="${empleadoLog.apellido}"></h1>
+            <h1 class="masthead-heading mb-0" th:text="${empleadoLog.id}"></h1>
+        </div>
+<!--        <a th:href="@{/cliente/(correo=${empleadoLog.mail})}" class="btn btn-primary btn-xl rounded-pill mt-5 ">¡Agrega una-->
+        <a th:href="@{/contrato/(ide=${empleadoLog.id})}" class="btn btn-primary btn-xl rounded-pill mt-115 ">Realizar Contrato</a>
+        <a href="/" class="btn btn-primary btn-xl rounded-pill mt-115 ">Hacer Reserva</a>
+    </div>
 <!--    <div class="masthead-content">-->
 <!--        <div class="container">-->
-<!--            <h1 class="masthead-heading mb-0" th:text="${clienteLog.nombre}"></h1>-->
-<!--            <h1 class="masthead-heading mb-0" th:text="${clienteLog.apellido}"></h1>-->
+<!--            <h1 class="masthead-heading mb-0" th:text="${empleadoLog.nombre}"></h1>-->
+<!--            <h1 class="masthead-heading mb-0" th:text="${empleadoLog.apellido}"></h1>-->
 <!--        </div>-->
 <!--    </div>-->
 </header>
@@ -53,7 +63,7 @@
     <div class="container">
 
         <div class="row align-items-center">
-            <h1 class="row align-items-center" >Estos son nuestros vehiculos </h1>
+<!--            <h1 class="row align-items-center" >Estos son nuestros vehiculos </h1>-->
 
 <!--            <table class="table table-hover">-->
 <!--                <thead>-->
@@ -79,7 +89,7 @@
 <!--                    <td scope="row" th:text="${vehiculo.operativo}">-->
 <!--                    <td>-->
 <!--                        &lt;!&ndash; Declaramos y enviamos el valor de la variable action &ndash;&gt;-->
-<!--                        <a th:href="@{/reserva/generar_reserva(idv=__${vehiculo.id}__,idc=${clienteLog.id})}">Reservar</a>-->
+<!--                        <a th:href="@{/reserva/generar_reserva(idv=__${vehiculo.id}__,idc=${empleadoLog.id})}">Reservar</a>-->
 <!--                    </td>-->
 <!--                </tr>-->
 <!--                </tbody>-->
