--- a/src/main/resources/templates/reserva.html
+++ b/src/main/resources/templates/reserva.html
@@ -21,7 +21,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Alquiler de Vehiculos</a>
+        <a class="navbar-brand" th:href="@{/cliente/(correo=${clienteLog.mail})}">Alquiler de Vehiculos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,28 +29,17 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/cliente/editar-perfil(id=${clienteLog.id})}">Historial</a>
+                    <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial</a>
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/cliente}">Home</a>
-<!--                    <a class="nav-link" th:href="@{/cliente/(id=${clienteLog.id})}">Home</a>-->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/index">Salir</a>
+                    <a class="nav-link" href="/">Salir</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<header class="masthead text-center text-white">
-    <div class="masthead-content">
-        <div class="container">
-            <h1 class="masthead-heading mb-0">Formulario de Reserva</h1>
-        </div>
-    </div>
-</header>
 
 <section>
     <div class="container">
