--- a/src/main/resources/templates/index_ventas.html
+++ b/src/main/resources/templates/index_ventas.html
@@ -50,7 +50,7 @@
         </div>
 <!--        <a th:href="@{/cliente/(correo=${empleadoLog.mail})}" class="btn btn-primary btn-xl rounded-pill mt-5 ">¡Agrega una-->
         <a th:href="@{/contrato/(ide=${empleadoLog.id})}" class="btn btn-primary btn-xl rounded-pill mt-115 ">Realizar Contrato</a>
-        <a href="/" class="btn btn-primary btn-xl rounded-pill mt-115 ">Hacer Reserva</a>
+        <a th:href="@{/reserva/}" class="btn btn-primary btn-xl rounded-pill mt-115 ">Hacer Reserva</a>
     </div>
 <!--    <div class="masthead-content">-->
 <!--        <div class="container">-->
