--- a/src/main/resources/templates/exito_reserva.html
+++ b/src/main/resources/templates/exito_reserva.html
@@ -27,7 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="/">Alquiler de Vehiculo</a>
+      <a class="navbar-brand" href="/">Alquiler de Vehiculo  - HOME</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,8 +47,8 @@
   <header class="masthead text-center text-white">
     <div class="masthead-content">
       <div class="container">
-        <h1 class="masthead-heading mb-0">Alquiler de Vehiculo</h1>
-        <h2 class="masthead-subheading mb-0">LA RESERVA ESTÁ REGISTRADA.</h2>
+        <h2 class="masthead-heading mb-0">Alquiler de Vehículo</h2>
+        <h3 class="masthead-subheading mb-0">LA RESERVA ESTÁ REGISTRADA.</h3>
 <!--        <a href="/#" class="btn btn-primary btn-xl rounded-pill mt-5">¡Registrate!</a>-->
       </div>
     </div>
@@ -63,10 +63,10 @@
 <!--            <img class="img-fluid rounded-circle" src="img/m2.jpg" alt="">-->
           </div>
         </div>
-        <div class="col-lg-6 order-lg-1">
+        <div class="col-lg-10 order-lg-1">
           <div class="p-5">
-              <h2> EL NUMERO DE RESERVA</h2>
-                <h3 th:text="${id_ures}"></h3>
+              <h2> TOME NOTA!! EL NÚMERO DE RESERVA ES:</h2>
+                <h1 th:text="${id_ures}"class="display-4"></h1>
 <!--            <h2 class="display-4" th:text="${titulo}"></h2>-->
 <!--            <p th:text="${descripcion}"></p>-->
           </div>
