--- a/src/main/resources/templates/reserva.html
+++ b/src/main/resources/templates/reserva.html
@@ -84,7 +84,7 @@
                         <input type="text" class="form-control" name="typeGama" th:value="${vehiculo.typeGama}"/><br>
                         <!--                DATOS RESERVA     -->
                         <label><h3>DATOS DE LA RESERVA</h3></label><br>
-<!--                        <label>Fecha de Gestión</label>-->
+<!--                        <label>Fecha de Gestión</label>  se autogenera sola en el controlador de reservas, una vez que se hace la reserva  -->
 <!--                        <input type="Date" class="form-control" name="fechaRegistrp"/>-->
                         <label>Fecha de Retiro</label>
                         <input type="Date" class="form-control" name="fRetiro"/>
